--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,6 @@
+
+
+
 == README
 
 This README would normally document whatever steps are necessary to get the
@@ -26,3 +29,5 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+This is first repo
